<resources>
    <string name="app_name">Sprout</string>
    <string name="author">Fallgod</string>

    <string name="tab_home">首页</string>
    <string name="tab_project">项目</string>
    <string name="tab_wx">公众号</string>
    <string name="tab_mine">我的</string>
    <string name="title_score">积分</string>
    <string name="title_collect">收藏</string>
    <string name="title_rank">排名</string>
    <string name="title_my_article">我的文章</string>

    <string name="home_search_hint">根据关键字搜索</string>

    <string name="login_not_login">暂不登录</string>
    <string name="login_success">登录成功</string>

    <string name="register_success">注册成功</string>

    <string name="search_history">历史搜索</string>
    <string name="search_clear">清空</string>

    <string name="mine_history">足迹</string>
    <string name="mine_rank">排名</string>
    <string name="mine_score">我的积分</string>
    <string name="mine_collection">我的收藏</string>
    <string name="mine_article">我的文章</string>
    <string name="mine_current_score">当前积分</string>
    <string name="mine_website">网站</string>
    <string name="mine_setting">设置</string>

    <string name="setting_clear">清除缓存</string>
    <string name="setting_edition">版本</string>
    <string name="setting_author">作者</string>
    <string name="setting_project">项目</string>
    <string name="setting_copyright">版权声明</string>
    <string name="setting_logout">退出登录</string>
    <string name="setting_mode_night">夜间模式</string>
    <string name="setting_language">语言</string>
    <string name="language_system">跟随系统</string>
    <string name="language_zh">中文</string>
    <string name="language_en">English</string>

    <string name="publish_article">发布文章</string>
    <string name="publish_title">文章标题</string>
    <string name="publish_hint_100">100字以内</string>
    <string name="publish_link">文章链接</string>
    <string name="publish_hint_link">请输入链接</string>
    <string name="publish_done">分享</string>

    <string name="share_title">分享须知</string>
    <string name="share_information_1">只要是任何好文都可以分享哈，并不一定要是原创！投递的文章会进入广场 tab;</string>
    <string name="share_information_2">CSDN，掘金，简书等官方博客站点会直接通过，不需要审核;</string>
    <string name="share_information_3">其他个人站点会进入审核阶段，不要投递任何无效链接，测试的请尽快删除，否则可能会对你的账号产生一定影响;</string>
    <string name="share_information_4">目前处于测试阶段，如果你发现500等错误，可以向我提交日志，让我们一起使网站变得更好。</string>
    <string name="share_information_5">由于本站只有我一个人开发与维护，会尽力保证24小时内审核，当然有可能哪天太累，会延期，请保持佛系…</string>

    <string name="title_login">登录</string>
    <string name="title_register">注册</string>
    <string name="common_default_number">0</string>
    <string name="common_hint_username">请输入账号</string>
    <string name="common_hint_password">请输入密码</string>
    <string name="common_hint_pwd_again">请再次输入密码</string>
    <string name="common_check_username">请填写账号</string>
    <string name="common_check_pwd">请填写密码</string>
    <string name="common_check_repwd">请填写确认密码</string>
    <string name="common_check_2pwd">两次输入密码不一致</string>
    <string name="common_prompt">提示</string>
    <string name="common_sure">确定</string>
    <string name="common_cancel">取消</string>
    <string name="common_back">返回</string>
    <string name="common_clear">清除</string>
    <string name="common_visible_pwd">密码可见性</string>
    <string name="common_search">搜索</string>
    <string name="common_add_article">发布文章</string>
    <string name="common_close">关闭</string>
    <string name="common_no_login">请先登录～</string>
    <string name="common_logout_confirm">确定退出登录？</string>
    <string name="common_logout_done">已退出登录</string>
    <string name="common_integral_rule">积分规则</string>
    <string name="common_delete">删除</string>
    <string name="common_check_title">请输入标题</string>
    <string name="common_check_link">请输入链接</string>
</resources>