<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="vm"
            type="com.jsx.sprout.ui.publish.PublishVM"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/main_bg_1"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:elevation="6dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/ripple_circle_bg"
                android:padding="15dp"
                android:src="@drawable/svg_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/publish_article"
                android:textColor="?attr/theme_color_1"
                android:textSize="17sp"
                android:textStyle="bold" />
        </LinearLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:overScrollMode="never">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/padding"
                    android:layout_marginTop="25dp"
                    android:text="@string/publish_title"
                    android:textColor="@color/theme"
                    android:textSize="@dimen/text_2" />

                <EditText
                    android:id="@+id/etTitle"
                    android:layout_width="match_parent"
                    android:layout_height="110dp"
                    android:layout_marginLeft="@dimen/padding"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="@dimen/padding"
                    android:background="@drawable/radius_3_main_2"
                    android:gravity="top"
                    android:text="@={vm.articleTitle}"
                    android:hint="@string/publish_hint_100"
                    android:maxLength="100"
                    android:padding="10dp"
                    android:textColor="?attr/theme_color_1"
                    android:textColorHint="?attr/theme_color_3"
                    android:textSize="@dimen/text_1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/padding"
                    android:layout_marginTop="25dp"
                    android:text="@string/publish_link"
                    android:textColor="@color/theme"
                    android:textSize="@dimen/text_2" />

                <EditText
                    android:id="@+id/etLink"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/padding"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="@dimen/padding"
                    android:background="@drawable/radius_3_main_2"
                    android:hint="@string/publish_hint_link"
                    android:text="@={vm.articleLink}"
                    android:maxLines="100"
                    android:padding="8dp"
                    android:textColor="?attr/theme_color_1"
                    android:textColorHint="?attr/theme_color_3"
                    android:textSize="@dimen/text_1" />

                <include layout="@layout/include_share_notice" />

                <Button
                    android:id="@+id/btPublish"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:layout_marginLeft="80dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="80dp"
                    android:layout_marginBottom="100dp"
                    android:background="@drawable/ripple_tag_bg"
                    android:gravity="center"
                    android:text="@string/publish_done"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_1" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>


    </LinearLayout>

</layout>
