<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="vm"
            type="com.jsx.sprout.ui.login.LoginVM" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp">

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_login"
            android:textColor="?attr/theme_color_1"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.1" />

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/title_register"
            android:textColor="@color/purple_200"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_login" />

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="@dimen/padding"
            android:layout_marginTop="60dp"
            android:layout_marginRight="@dimen/padding"
            android:autofillHints="@string/common_hint_username"
            android:background="@null"
            android:hint="@string/common_hint_username"
            android:inputType="text"
            android:text="@={vm.username}"
            android:textColor="?attr/theme_color_1"
            app:layout_constraintTop_toBottomOf="@+id/tv_register" />

        <ImageView
            android:id="@+id/iv_clear"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/common_clear"
            android:padding="8dp"
            android:src="@drawable/svg_clear"
            app:layout_constraintBottom_toBottomOf="@+id/et_username"
            app:layout_constraintEnd_toEndOf="@+id/et_username"
            app:layout_constraintTop_toTopOf="@+id/et_username" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/padding"
            android:layout_marginRight="@dimen/padding"
            android:background="?attr/division_line"
            app:layout_constraintBottom_toBottomOf="@+id/et_username" />

        <EditText
            android:id="@+id/et_password"
            passType="@{vm.passIsVisibility}"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="@dimen/padding"
            android:layout_marginTop="15dp"
            android:layout_marginRight="@dimen/padding"
            android:autofillHints="@string/common_hint_password"
            android:background="@null"
            android:hint="@string/common_hint_password"
            android:inputType="textPassword"
            android:text="@={vm.password}"
            android:textColor="?attr/theme_color_1"
            app:layout_constraintTop_toBottomOf="@+id/et_username" />

        <ImageView
            android:id="@+id/iv_visibility"
            passSrc="@{vm.passIsVisibility}"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/common_visible_pwd"
            android:padding="8dp"
            android:src="@drawable/selector_pass"
            app:layout_constraintBottom_toBottomOf="@+id/et_password"
            app:layout_constraintEnd_toEndOf="@+id/et_password"
            app:layout_constraintTop_toTopOf="@+id/et_password" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/padding"
            android:layout_marginRight="@dimen/padding"
            android:background="?attr/division_line"
            app:layout_constraintBottom_toBottomOf="@+id/et_password" />


        <RelativeLayout
            android:id="@+id/rl_login"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="60dp"
            android:layout_marginRight="50dp"
            android:background="?attr/main_bg_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_password"
            app:layout_constraintWidth_percent="0.7">

            <TextView
                android:id="@+id/tvLoginTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/title_login"
                android:textColor="?attr/theme_color_2"
                android:textSize="@dimen/text_1"
                android:textStyle="bold" />

            <com.jsx.applib.view.LoadingView
                android:id="@+id/loading_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:ballColor="@color/purple_500"
                app:max_radius="10dp" />
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/login_not_login"
            android:textColor="@color/purple_200"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rl_login" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/md_blue_100"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/tv_cancel">

            <com.jsx.applib.view.CircleProgressView
                android:id="@+id/cp_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible"
                app:radius="50dp"
                app:text_size="12sp" />
        </FrameLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>