<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="vm"
            type="com.jsx.sprout.ui.setting.SettingVM" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/main_bg_1"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/ripple_circle_bg"
                android:padding="15dp"
                android:src="@drawable/svg_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="设置"
                android:textColor="?attr/theme_color_1"
                android:textSize="17sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvNight"
            style="@style/text_1"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="58dp"
            android:background="@drawable/ripple_bg"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/padding"
            android:paddingRight="@dimen/padding"
            android:text="夜间模式"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/scDayNight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvNight"
            app:layout_constraintBottom_toBottomOf="@+id/tvNight"
            android:layout_marginEnd="@dimen/padding"/>
        <TextView
            android:id="@+id/tvClear"
            style="@style/text_1"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="58dp"
            android:background="@drawable/ripple_bg"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/padding"
            android:paddingRight="@dimen/padding"
            android:text="@string/setting_clear"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvNight"
            app:drawableRightCompat="@drawable/arrow_right" />

        <TextView
            android:id="@+id/tvClearValue"
            style="@style/text_2"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginEnd="50dp"
            android:gravity="center_vertical"
            app:layout_constraintBottom_toBottomOf="@+id/tvClear"
            app:layout_constraintRight_toRightOf="@+id/tvClear"
            app:layout_constraintTop_toTopOf="@+id/tvClear"
            tools:text="1.23M" />

        <TextView
            android:id="@+id/tvVersion"
            style="@style/text_1"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/ripple_bg"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/padding"
            android:paddingRight="@dimen/padding"
            android:text="@string/setting_edition"
            app:layout_constraintTop_toBottomOf="@id/tvClear"
            app:drawableRightCompat="@drawable/arrow_right" />

        <TextView
            android:id="@+id/tvVersionValue"
            style="@style/text_2"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginEnd="50dp"
            android:gravity="center_vertical"
            tools:text="v 0.0.1"
            app:layout_constraintBottom_toBottomOf="@+id/tvVersion"
            app:layout_constraintRight_toRightOf="@+id/tvVersion"
            app:layout_constraintTop_toTopOf="@+id/tvVersion" />

        <TextView
            android:id="@+id/tvAuthor"
            style="@style/text_1"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/ripple_bg"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/padding"
            android:paddingRight="@dimen/padding"
            android:text="@string/setting_author"
            app:layout_constraintTop_toBottomOf="@+id/tvVersion"
            app:drawableRightCompat="@drawable/arrow_right" />

        <TextView
            android:id="@+id/tvAuthorValue"
            style="@style/text_2"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginEnd="50dp"
            android:gravity="center_vertical"
            android:text="fallgod"
            app:layout_constraintBottom_toBottomOf="@+id/tvAuthor"
            app:layout_constraintRight_toRightOf="@+id/tvAuthor"
            app:layout_constraintTop_toTopOf="@+id/tvAuthor" />

        <TextView
            android:id="@+id/tvProject"
            style="@style/text_1"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/ripple_bg"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/padding"
            android:paddingRight="@dimen/padding"
            android:text="@string/setting_project"
            app:layout_constraintTop_toBottomOf="@+id/tvAuthor"
            app:drawableRightCompat="@drawable/arrow_right" />

        <TextView
            android:id="@+id/tvCopyright"
            style="@style/text_1"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/ripple_bg"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/padding"
            android:paddingRight="@dimen/padding"
            android:text="@string/setting_copyright"
            app:layout_constraintTop_toBottomOf="@+id/tvProject"
            app:drawableRightCompat="@drawable/arrow_right" />

        <TextView
            android:id="@+id/tvLogout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/ripple_bg"
            android:gravity="center"
            android:text="@string/setting_logout"
            android:textColor="@color/red"
            android:textSize="@dimen/text_1"
            app:layout_constraintTop_toBottomOf="@+id/tvCopyright" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>